$Id: CHANGES,v 1.15 1999/11/11 16:13:57 tiniou Exp $

Changes between versions 0.4b9 and 0.4b10 (released ???????????????)
====================================================================

1.	Make configure test if the system glob routines support 
	extended syntax (ALTDIRFUNC). If not, use the internal glob
	routines instead of system ones. Thanks to Bernhard Sadlowski 
	<sadlowsk@Mathematik.Uni-Bielefeld.DE> for reporting the bug
	and helping me resolve this and other minor libc5 compiling
	glitches.

Changes between versions 0.4b8 and 0.4b9 (released November 5, 1999)
====================================================================

1.	Use lchown instead of chown, fixing a possible security problem 
	when restoring symlinks (a malicious user could use this
	to deliberately corrupt the ownership of important system files).
	Thanks to Chris Siebenmann <cks@utcc.utoronto.ca> for detecting
	this and providing the patch.

Changes between versions 0.4b7 and 0.4b8 (released November 3, 1999)
====================================================================

1.	Put dump sources under CVS, added Id tags in all files so
	one can use 'ident' on binary files.

2.	Added the dump/restore version in the usage text so one can
	easily verify the version he is using.

3.	Small patch from Nuno Oliveira <nuno@eq.uc.pt> which fixes
	a va_start/va_end problem on linux-ppc (always call va_start
	va_end in pairs each time we use a vararg function).

4.	Added again the DT_* constants because old libc does not
	contain them :(. Thanks to Eric Maisonobe <virnet@nat.fr>
	for submitting the bug report.

5.	Use ext2fs_llseek instead of llseek. With recent e2fsprogs
	this should enable dumping big (huge) filesystems.

6.	Added the RSH environment variable in order to be able to
	use a rsh replacement like ssh when doing remote backups (and
	bypass the security limitations of rcmd). Now you can do remote
	backups without being root (or making dump setuid root).
