@@ -1,4 +1,4 @@
-$Id: THANKS,v 1.8 1999/11/11 16:13:57 tiniou Exp $
+$Id: THANKS,v 1.9 1999/11/17 22:46:40 tiniou Exp $
 
 Dump and restore were written by the people of the CSRG at the University
 of California, Berkeley.
@@ -28,6 +28,7 @@ Eirik Fuller		eirik@netcom.com
 Henry Katz		hkatz@hkatz.dialup.access.net
 Klaus Kudielka		kkudielk@cacofonix.nt.tuwien.ac.at
 Florian La Roche	florian@jurix.jura.uni-sb.de
+Patrick J. LoPresti	patl@cag.lcs.mit.edu
 Greg Lutz		greglutz@ix.netcom.com
 Eric Maisonobe		virnet@nat.fr
 David Miller		davem@caip.rutgers.edu
@@ -38,6 +39,7 @@ Brent Olson		night@halcyon.com
 Bernhard Sadlowski	sadlowsk@Mathematik.Uni-Bielefeld.DE
 Chris Siebenmann	cks@utcc.utoronto.ca
 Bob Snyder		rsnyder@janet.advsys.com
+Theodore Y. Ts'o 	tytso@mit.edu
 Stephen Tweedie		sct@dcs.ed.ac.uk
 Daniel Veillard		Daniel.Veillard@imag.fr
 Jason Venner		jason@idiom.com
